--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,18 +1,24 @@
-name: Build
-on: [push]
+name: Deploy 🚀
+
+on:
+  workflow_dispatch:
+  push:
+    branches:
+      - main
+
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v4
-
-    - name: Setup .NET
-      uses: actions/setup-dotnet@v5
-      with:
-        dotnet-version: '9.x'
-
-    - name: Restore dependencies
-      run: dotnet restore
-
-    - name: Build
-      run: dotnet build --no-restore
+      - name: 🛠️ Checkout Repository
+        uses: actions/checkout@v4
+      - name: ⚙️ Setup .NET 9 SDK
+        uses: actions/setup-dotnet@v4
+        with:
+          dotnet-version: 9.x
+      - name: 📦 Restore Dependencies
+        run: dotnet restore ./WebApplicationTeamCity/WebApplicationTeamCity.csproj
+      - name: 🏗️ Build Project
+        run: dotnet build ./WebApplicationTeamCity/WebApplicationTeamCity.csproj --no-restore
+      # - name: ✅ Run Tests
+      #   run: dotnet test ./BookManager/BookManager.csproj --no-build --verbosity normal
