--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -42,19 +42,19 @@ jobs:
       - name: Assign version
         run: |
           echo "TAG_NAME=latest" >> $GITHUB_ENV
-          if [ "${‎{ github.event.release.tag_name }‎}" != "" ]; then
-            echo "TAG_NAME=${‎{ github.event.release.tag_name }‎}" >> $GITHUB_ENV
+          if [ "${{ github.event.release.tag_name }}" != "" ]; then
+            echo "TAG_NAME=${{ github.event.release.tag_name }}" >> $GITHUB_ENV
           fi;
-          if [ "${‎{ github.event.inputs.version }‎}" != "" ]; then
-            echo "TAG_NAME=${‎{ github.event.inputs.version }‎}" >> $GITHUB_ENV
+          if [ "${{ github.event.inputs.version }}" != "" ]; then
+            echo "TAG_NAME=${{ github.event.inputs.version }}" >> $GITHUB_ENV
           fi;
       
       - name: Login to GitHub Container Registry
         uses: docker/login-action@v2
         with:
           registry: hub.docker.com
-          username: ${‎{ secrets.DOCKER_REPO_USERNAME }‎}
-          password: ${‎{ secrets.DOCKER_REPO_PASSWORD }‎}
+          username: ${{ secrets.DOCKER_REPO_USERNAME }}
+          password: ${{ secrets.DOCKER_REPO_PASSWORD }}
       
       # Build and push new docker image, skip for manual redeploy other than 'latest'
       - name: Build and push Docker images
@@ -64,4 +64,4 @@ jobs:
           file: Dockerfile
           context: .
           push: true
-          tags: hub.docker.com/secrets.DOCKER_REPO_USERNAME/${‎{ env.image_repository_name }‎}:latest
+          tags: hub.docker.com/secrets.DOCKER_REPO_USERNAME/${{ env.image_repository_name }}:latest
