--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -42,12 +42,12 @@ jobs:
       - name: Assign version
         run: |
           echo "TAG_NAME=latest" >> $GITHUB_ENV
-          if [ "${{ github.event.release.tag_name }}" != "" ]; then
-            echo "TAG_NAME=${{ github.event.release.tag_name }}" >> $GITHUB_ENV
-          fi;
-          if [ "${{ github.event.inputs.version }}" != "" ]; then
-            echo "TAG_NAME=${{ github.event.inputs.version }}" >> $GITHUB_ENV
-          fi;
+          # if [ "${{ github.event.release.tag_name }}" != "" ]; then
+          #   echo "TAG_NAME=${{ github.event.release.tag_name }}" >> $GITHUB_ENV
+          # fi;
+          # if [ "${{ github.event.inputs.version }}" != "" ]; then
+          #   echo "TAG_NAME=${{ github.event.inputs.version }}" >> $GITHUB_ENV
+          # fi;
       
       - name: Login to GitHub Container Registry
         uses: docker/login-action@v2
