--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -52,7 +52,7 @@ jobs:
       - name: Login to GitHub Container Registry
         uses: docker/login-action@v2
         with:
-          registry: hub.docker.com
+          registry: index.docker.io/v1
           username: ${{ secrets.DOCKER_REPO_USERNAME }}
           password: ${{ secrets.DOCKER_REPO_PASSWORD }}
       
@@ -64,4 +64,4 @@ jobs:
           file: Dockerfile
           context: .
           push: true
-          tags: hub.docker.com/secrets.DOCKER_REPO_USERNAME/${{ env.image_repository_name }}:latest
+          tags: secrets.DOCKER_REPO_USERNAME/${{ env.image_repository_name }}:latest
