Change Docker context path in workflow

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -62,6 +62,6 @@ jobs:
         if: ${{ github.event.inputs.version == '' || github.event.inputs.version == 'latest' }}
         with:
           file: Dockerfile
-          context: .
+          context: ./WebApplicationTeamCity
           push: true
           tags: ${{ secrets.DOCKER_REPO_USERNAME }}/msapi:latest
