--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -49,10 +49,12 @@ jobs:
           #   echo "TAG_NAME=${{ github.event.inputs.version }}" >> $GITHUB_ENV
           # fi;
       
-      - name: Login to GitHub Container Registry
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
+      
+      - name: Login to Docker Hub
         uses: docker/login-action@v2
         with:
-          registry: index.docker.io/v1
           username: ${{ secrets.DOCKER_REPO_USERNAME }}
           password: ${{ secrets.DOCKER_REPO_PASSWORD }}
       
